add npm dependencies

--- a/package.json
+++ b/package.json
@@ -8,13 +8,74 @@
   },
   "scripts": {},
   "dependencies": {
-    "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/composition-api": "^0.30.0",
-    "@nuxtjs/gtm": "^2.4.0",
-    "@nuxtjs/i18n": "^7.2.0",
-    "@nuxtjs/robots": "^2.5.0",
-    "@nuxtjs/sitemap": "^2.4.0",
-    "@nuxtjs/toast": "^3.3.1"
+    "@apollo/client": "^3.4.17",
+	"@codemirror/autocomplete": "^0.19.4",
+	"@codemirror/closebrackets": "^0.19.0",
+	"@codemirror/commands": "^0.19.5",
+	"@codemirror/comment": "^0.19.0",
+	"@codemirror/fold": "^0.19.1",
+	"@codemirror/gutter": "^0.19.4",
+	"@codemirror/highlight": "^0.19.0",
+	"@codemirror/history": "^0.19.0",
+	"@codemirror/lang-javascript": "^0.19.2",
+	"@codemirror/lang-json": "^0.19.1",
+	"@codemirror/language": "^0.19.3",
+	"@codemirror/lint": "^0.19.2",
+	"@codemirror/matchbrackets": "^0.19.3",
+	"@codemirror/rectangular-selection": "^0.19.1",
+	"@codemirror/search": "^0.19.2",
+	"@codemirror/state": "^0.19.3",
+	"@codemirror/text": "^0.19.5",
+	"@codemirror/view": "^0.19.12",
+	"@restbox/graphql": "^0.1.0",
+	"@restbox/sandboxer": "^1.0.0",
+	"@nuxtjs/axios": "^5.13.6",
+	"@nuxtjs/composition-api": "^0.30.0",
+	"@nuxtjs/gtm": "^2.4.0",
+	"@nuxtjs/i18n": "^7.2.0",
+	"@nuxtjs/robots": "^2.5.0",
+	"@nuxtjs/sitemap": "^2.4.0",
+	"@nuxtjs/toast": "^3.3.1",
+	"@urql/core": "^2.3.5",
+	"@urql/exchange-auth": "^0.1.6",
+	"@urql/exchange-graphcache": "^4.3.5",
+	"acorn": "^8.5.0",
+	"acorn-walk": "^8.2.0",
+	"axios": "^0.24.0",
+	"core-js": "^3.19.1",
+	"esprima": "^4.0.1",
+	"firebase": "^9.4.1",
+	"fp-ts": "^2.11.5",
+	"fuse.js": "^6.4.6",
+	"graphql": "^15.7.2",
+	"graphql-language-service-interface": "^2.9.1",
+	"graphql-language-service-parser": "^1.10.0",
+	"graphql-tag": "^2.12.6",
+	"io-ts": "^2.2.16",
+	"json-loader": "^0.5.7",
+	"lodash": "^4.17.21",
+	"mustache": "^4.2.0",
+	"node-interval-tree": "^1.3.3",
+	"nuxt": "^2.15.8",
+	"paho-mqtt": "^1.1.0",
+	"rxjs": "^7.4.0",
+	"socket.io-client-v2": "npm:socket.io-client@^2.4.0",
+	"socket.io-client-v3": "npm:socket.io-client@^3.1.3",
+	"socket.io-client-v4": "npm:socket.io-client@^4.3.2",
+	"socketio-wildcard": "^2.0.0",
+	"splitpanes": "^2.3.8",
+	"subscriptions-transport-ws": "^0.11.0",
+	"tern": "^0.24.3",
+	"uuid": "8.3.2",
+	"vue-apollo": "^3.0.8",
+	"vue-cli-plugin-apollo": "^0.22.2",
+	"vue-functional-data-merge": "^3.1.0",
+	"vue-github-button": "^1.3.0",
+	"vue-textarea-autosize": "^1.1.1",
+	"vue-tippy": "^4.13.0",
+	"vuejs-auto-complete": "^0.9.0",
+	"wonka": "^4.0.15",
+	"yargs-parser": "^21.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
