--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
 	"@codemirror/state": "^0.19.3",
 	"@codemirror/text": "^0.19.5",
 	"@codemirror/view": "^0.19.12",
-	"@restbox/graphql": "^0.1.0",
-	"@restbox/sandboxer": "^1.0.0",
 	"@nuxtjs/axios": "^5.13.6",
 	"@nuxtjs/composition-api": "^0.30.0",
 	"@nuxtjs/gtm": "^2.4.0",
@@ -79,6 +77,50 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@babel/preset-env": "^7.16.0"
+    "@babel/preset-env": "^7.16.0",
+    "@graphql-codegen/add": "^3.1.0",
+    "@graphql-codegen/cli": "2.2.2",
+    "@graphql-codegen/typed-document-node": "^2.2.0",
+    "@graphql-codegen/typescript": "2.3.1",
+    "@graphql-codegen/typescript-operations": "^2.2.0",
+    "@graphql-codegen/typescript-urql-graphcache": "^2.2.1",
+    "@graphql-codegen/urql-introspection": "^2.1.0",
+    "@graphql-typed-document-node/core": "^3.1.0",
+    "@nuxt/types": "^2.15.8",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/color-mode": "^2.1.1",
+    "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/google-analytics": "^2.4.0",
+    "@nuxtjs/google-fonts": "^1.3.0",
+    "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/stylelint-module": "^4.0.0",
+    "@nuxtjs/svg": "^0.3.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@types/codemirror": "^5.60.5",
+    "@types/cookie": "^0.4.1",
+    "@types/esprima": "^4.0.3",
+    "@types/lodash": "^4.14.177",
+    "@types/splitpanes": "^2.2.1",
+    "@urql/devtools": "^2.0.3",
+    "@vue/runtime-dom": "^3.2.22",
+    "@vue/test-utils": "^1.2.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^27.3.1",
+    "jest": "^27.3.1",
+    "jest-serializer-vue": "^2.0.2",
+    "npm-run-all": "^4.1.5",
+    "nuxt-windicss": "^2.0.12",
+    "prettier": "^2.4.1",
+    "raw-loader": "^4.0.2",
+    "sass": "^1.43.4",
+    "sass-loader": "^10.2.0",
+    "stylelint": "^14.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard-scss": "^2.0.1",
+    "ts-jest": "^27.0.7",
+    "typescript": "^4.4.4",
+    "vue-jest": "^3.0.7",
+    "worker-loader": "^3.0.8"
   }
 }
